# dota-ti-eda

./: .pre-commit-config.yaml  README.md
dagster/: .env.sample  Makefile  pyproject.toml  workspace.yaml
dagster/dagster_home/: dagster.yaml
dagster/dagster_home/history/: runs.db
dagster/dagster_home/history/runs/: index.db
dagster/dagster_home/schedules/: schedules.db
dagster/pipelines/opendota/: ops.py  repository.py  resources.py
my-dagster-project/: .gitignore  Makefile  README.md  workspace.yaml
my-dagster-project/my_dagster_project/: repository.py
